[package]
name = "iron-slog"
description = "Logging Middleware for Iron framework, with slog-rs"
version = "0.0.2"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ubnt-intrepid/iron-slog.git"
documentation = "https://docs.rs/iron-slog"

[dependencies]
slog = "^2.0"
iron = "~0.6"
chrono = "0.4.2"

[dev-dependencies]
slog-term = "^2.0"
slog-async = "^2.0"
router = "0.6"
